修改版本号

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.inurl</groupId>
     <artifactId>port-forward</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>Port forward</name>
     <description>Port forward</description>
