--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
+sudo: false
 
 jdk:
 - oraclejdk8
 
 script:
-  - ./mvnw clean package
+  - ./mvnw clean cobertura:cobertura package
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
